# Meta-Repo

./: README.md
Empowerment/: implementation_guide.md  pyproject.toml  requirements.txt
Empowerment/doc/: paper.aux  paper.out  paper.tex
Empowerment/results/raw/: corridor_h3_T200_n100.json
Empowerment/scripts/: run_corridor_experiment.py
Empowerment/src/empowerment/: __init__.py  blahut_arimoto.py  exact.py  nstep_model.py  score.py
Empowerment/src/envs/: __init__.py  base.py  corridor.py
Empowerment/src/metrics/: __init__.py  visitation.py
Empowerment/src/policies/: __init__.py  base.py  epsilon_greedy.py  greedy.py  softmax.py
Empowerment/src/rollout/: __init__.py  simulate.py
Empowerment/tests/: test_blahut_arimoto.py  test_corridor.py  test_policies.py
JoschaIdeas/recon/: __init__.py  autoencoder.py  core.py  engine.py  env.py  scripts.py
JoschaIdeas/recon/examples/: __init__.py  demo_active_perception.py  gridworld.py  minecraft_like.py
epstein-investigation/: .gitignore  FINDINGS.md  INSTRUCTIONS.md  extract_and_summarize.py
gpt2-q-head/: .gitignore  README.md  analyze.py  dataset.py  evaluate_checkpoints.py  generate_doc.py  math_overview.tex  model.py  requirements.txt  train.py  train_comparison.py
